--- a/frontend/src/pages/SignIn/signin.css
+++ b/frontend/src/pages/SignIn/signin.css
@@ -92,4 +92,12 @@ form button{
   cursor: pointer;
 }
 
+input:read-only{
 
+}
+
+input[data-readonly] {
+
+  background-color: #dddddd;
+  cursor: no-drop;
+}
